--- a/Activity 4/style.css
+++ b/Activity 4/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    transition: all linear 0.5s;
+    transition: height linear 0.5s, width linear 0.1s;
 }
 
 .black {
@@ -129,12 +129,21 @@
     border-radius: 20px;
     transform: translate(-50%,-50%);
     position: absolute;
-    width: 80vw;
-    height: 80vh;
     left: 50%;
     top: 50%;
     background-color: #ffffff;
 }
+
+.hw-full {
+    width: 80vw;
+    height: 80vh;
+}
+.hw-none {
+    width: 0;
+    height: 0;
+    overflow: hidden;
+}
+
 #img {
     padding: 15px;
     text-align: right;
